--- a/wasmModule/Cargo.toml
+++ b/wasmModule/Cargo.toml
@@ -1,23 +1,18 @@
 [package]
-name = "try-mem-import"
+name = "wasmModule"
 version = "0.1.0"
 edition = "2018"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-#[lib]
-#crate-type = ["cdylib"]
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-libc = "0.2.7"
-jni = "0.19.0"
-wasmer = "2.0"
-wasmer-wasi = "2.0"
-wasmer-wasi-types = "2.0"
-# arrow = "4.2.0"
 arrow = {version = "6.3.0", default-features = false, features = ["ipc"]}
 #arrow = { path = "/home/mohammadtn/Wasm-mem-import/arrow-rs/arrow", default-features = false, features = ["prettyprint"]}
-#arrow = { path = "/home/mohammadtn/FFI32/arrow-rs/arrow", default-features = false, features = ["prettyprint"]}
 
-wasmtime = "0.31.0"
-wasmtime-wasi = "0.31.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
